--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.0.js"></script>
+    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    
 </head>
 <body>
    <button>跳转</button>
 <script>
-    var button = document.querySelector("button")
-    button.onclick = function(){
-        wx.miniProgram.navigateTo({url:'/pages/index/index'});
-    }
+   $("button").on("click",function () {
+       console.log(1)
+       wx.miniProgram.navigateTo({url:'/pages/index/index'});
+   })
 
 
 </script>
+
+
 
 </body>
 </html>
