--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <title>Title</title>
     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.0.js"></script>
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
-    
 </head>
 <body>
-   <button>跳转</button>
+   <button style="width: 300px;height: 300px">跳转</button>
 <script>
    $("button").on("click",function () {
        console.log(1)
-       wx.miniProgram.navigateTo({url:'/pages/index/index'});
+       wx.miniProgram.switchTab({url:'/pages/index/index'});
    })
 
 
